docs: revise Task 4 - Paparazzi already at alpha05, fix crashes not bump version